Extension of base functionality

--- a/ames-web-gui/src/de/kp/ames/web/public/index.html
+++ b/ames-web-gui/src/de/kp/ames/web/public/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>AMES Web GUI</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
+    <meta name="gwt:property" id="urn:de:kp:reg:url" content="Reference to AMES Web Service"/>
 	
 	<style type="text/css">
 		#x-splash {position:absolute;left:0;top:0;z-index: 20001; width:360px;height:116px;}
@@ -11,7 +13,7 @@
 	</style>
 	
     <style type="text/css">
-        @import "freg.css";
+        @import "ames.css";
     </style>
 	
 	<link href="images/favicon.ico" rel="icon"></link>
