Extension of functionality

--- a/ames-web-gui/src/de/kp/ames/web/public/index.html
+++ b/ames-web-gui/src/de/kp/ames/web/public/index.html
@@ -8,8 +8,8 @@
 	
 	<style type="text/css">
 		#x-splash {position:absolute;left:0;top:0;z-index: 20001; width:360px;height:116px;}
-		#x-splash a {color: #DADADA;}
-		#x-splash-msg {font: normal 11px tahoma,arial,helvetica;color:#DADADA;}
+		#x-splash a {color: #708491;}
+		#x-splash-msg {font: normal 11px tahoma,arial,helvetica;color:#708491;}
 	</style>
 	
     <style type="text/css">
@@ -19,7 +19,7 @@
 	<link href="images/favicon.ico" rel="icon"></link>
 	
   </head>
-  <body id="main" style="background-color:#708491;">
+  <body id="main" style="background-color:#f2f2f2;">
 	<div id="x-splash">
 		<div class="x-splash-indicator">
 			<p style="margin-top:8px;text-align:center;" id="x-splash-msg">Loading Core...</p>
