Test Environment added.

--- a/ames-web-gui/src/de/kp/ames/web/public/index.html
+++ b/ames-web-gui/src/de/kp/ames/web/public/index.html
@@ -9,6 +9,9 @@
     
     <!-- wms connection parameters -->
     <meta name="gwt:property" id="urn:de:kp:wms:url" content="http://localhost:9090/geoserver/wms"/>
+
+    <!-- indicator to switch between showcase or main application -->
+    <meta name="gwt:property" id="urn:de:kp:showcase" content="true"/>
 	
 	<style type="text/css">
 		#x-splash {position:absolute;left:0;top:0;z-index: 20001; width:360px;height:116px;}
