--- a/ames-web-gui/src/de/kp/ames/web/public/index.html
+++ b/ames-web-gui/src/de/kp/ames/web/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
     <!--  reference to main web service -->
-    <meta name="gwt:property" id="urn:de:kp:reg:url" content="Reference to AMES Web Service"/>
+    <meta name="gwt:property" id="urn:de:kp:reg:url" content="http://localhost:8080/ames"/>
     
     <!-- wms connection parameters -->
     <meta name="gwt:property" id="urn:de:kp:wms:url" content="http://localhost:9090/geoserver/wms"/>
