--- a/ames-web-gui/src/de/kp/ames/web/public/index.html
+++ b/ames-web-gui/src/de/kp/ames/web/public/index.html
@@ -6,9 +6,12 @@
 
     <!--  reference to main web service -->
     <meta name="gwt:property" id="urn:de:kp:reg:url" content="https://localhost:8443/ames/saml"/>
-    
+
+    <!-- reference to communication service -->
+    <meta name="gwt:property" id="urn:de:kp:reg:url" content="https://localhost:8443/ames/saml"/>
+        
     <!-- wms connection parameters -->
-    <meta name="gwt:property" id="urn:de:kp:wms:url" content="http://localhost:9090/geoserver/wms"/>
+    <meta name="gwt:property" id="urn:de:kp:com:url" content="http://localhost:8480/xcom/mdrr_communications/MDRR_Communications.html"/>
 
     <!-- indicator to switch between showcase or main application -->
     <meta name="gwt:property" id="urn:de:kp:showcase" content="true"/>
