Layout for access & bulletin harmonized.

--- a/ames-web-gui/src/de/kp/ames/web/public/index.html
+++ b/ames-web-gui/src/de/kp/ames/web/public/index.html
@@ -8,10 +8,10 @@
     <meta name="gwt:property" id="urn:de:kp:reg:url" content="https://localhost:8443/ames/saml"/>
 
     <!-- reference to communication service -->
-    <meta name="gwt:property" id="urn:de:kp:reg:url" content="https://localhost:8443/ames/saml"/>
+    <meta name="gwt:property" id="urn:de:kp:com:url" content="http://localhost:8480/xcom/mdrr_communications/MDRR_Communications.html"/>
         
     <!-- wms connection parameters -->
-    <meta name="gwt:property" id="urn:de:kp:com:url" content="http://localhost:8480/xcom/mdrr_communications/MDRR_Communications.html"/>
+    <meta name="gwt:property" id="urn:de:kp:wms:url" content="http://localhost:8090/wms"/>
 
     <!-- indicator to switch between showcase or main application -->
     <meta name="gwt:property" id="urn:de:kp:showcase" content="true"/>
@@ -58,7 +58,7 @@
     </script>
  
     <!-- GWT -->
-    <script language='javascript' src='de.kp.ames.web.ames.nocache.js'></script>
+    <script language='javascript' src='adf_client.nocache.js'></script>
 
 	<script type="text/javascript">
 		document.getElementById('x-splash-msg').innerHTML = 'Initializing...';
